--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
             <input name="hbuser" type="text" value="">
             <label for="hbuser">Hummingbird Username</label>
           </div>
-          <button class="waves-effect waves-light btn-flat right" type="submit" name="action">SUBMIT</button>
+          <button class="waves-effect deep-orange-text btn-flat right" type="submit" name="action">SUBMIT</button>
         </div>
       </form>
     </div>
