--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,7 @@
     <ul>
       <li><img src="img/hb.png" alt=" " /></li>
       <li><a href="#">Rules</a> | </li>
-      <li>Background Image by <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=40316086">LighTofHeaven</a> (edited by <a href="http://konachan.com/post/show/174709/black_eyes-brown_hair-lightofheaven-long_hair-maki">MetalAnimer</a>)</li>
+      <li>Background Image by <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=40316086">LighTofHeaveN</a> (edited by <a href="http://konachan.com/post/show/174709/black_eyes-brown_hair-lightofheaven-long_hair-maki">MetalAnimer</a>)</li>
     </ul>
   </div>
 
