--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
             {% if messages %}
               <ul class=flashes>
               {% for message in messages %}
-                <li>{{ message }}</li>
+                <li class="message">{{ message }}</li>
               {% endfor %}
               </ul>
             {% endif %}
