--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>fff</title>
+  <meta charset="utf-8">
+  <title>
+    Verify - Slack Chat
+  </title>
+  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.css') }}"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/verify.css') }}" charset="utf-8">
 </head>
 <body>
-{{invite_id}}
+
+    <div class="row banner">
+
+      <h1 class="col s12">
+        The Hummingbird Slack
+      </h1>
+    </div>
+    <div class="container">
+    <div class="card key">
+      <div class="center code">{{invite_id}}</div>
+      <button class="waves-effect waves-light btn-flat right">
+        Copy to Clipboard
+      </button>
+    </div>
+    <div class="card steps">
+    <div class="row">
+      <h2 class="col s12">
+        What do I do with this?
+      </h2>
+      <ol class="col s12">
+        <li>Go to the profile of <span>{username}</span></li>
+        <li>Paste the above-written key into a new post and share it<br>
+            <i>Remember, post only the key and nothing else!</i></li>
+        <li>Check your mail</li>
+      </ol>
+    </div>
+  </div>
+  </div>
+  <footer>
+    <div class="row">
+      <div class="divider"></div>
+      Some text goes here... In case we decide to have something here..
+
+    </div>
+  </footer>
 </body>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
 </html>
