--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -29,10 +29,10 @@
         What do I do with this?
       </h2>
       <ol class="col s12">
-        <li>Go to the profile of <span>{username}</span></li>
+        <li>Go to the profile of <span><a href="http://hummingbird.me/users/Slack">Slack</a></span></li>
         <li>Paste the above-written key into a new post and share it<br>
             <i>Remember, post only the key and nothing else!</i></li>
-        <li>Check your mail</li>
+        <li>Check your mail for an invite!</li>
       </ol>
     </div>
   </div>
@@ -40,8 +40,7 @@
   <footer>
     <div class="row">
       <div class="divider"></div>
-      Some text goes here... In case we decide to have something here..
-
+      <span>Josh is love, Josh is life</span>
     </div>
   </footer>
 </body>
