--- a/app/static/css/invite.css
+++ b/app/static/css/invite.css
@@ -52,14 +52,20 @@ body {
 }
 
 .flashes {
-  font-weight: 200;
-  color: #ffffff;
-  padding: 5px;
+  font-weight: 300;
+  font-size: 1.3rem;
+  background-color: #FBE9E7;
+  color: #736a69;
+  padding: 10px;
+  margin: 0 15px;
   border-radius: 2px;
 }
 
 .flashes i {
-  padding-right: 5px;
+  font-size: 2rem;
+  color: #736a69;
+  padding-right: 25px;
+  padding-left: 5px;
 }
 
 footer {
