--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -19,30 +19,24 @@
     <div class="container">
     <div class="card key">
       <div class="center code">{{invite_id}}</div>
-      <button class="waves-effect waves-light btn-flat right">
+      <button class="waves-effect deep-orange-text btn-flat right">
         Copy to Clipboard
       </button>
     </div>
     <div class="card steps">
     <div class="row">
       <h2 class="col s12">
-        What do I do with this?
+        What do I do now?
       </h2>
       <ol class="col s12">
-        <li>Go to the profile of <span><a href="http://hummingbird.me/users/Slack">Slack</a></span></li>
-        <li>Paste the above-written key into a new post and share it<br>
-            <i>Remember, post only the key and nothing else!</i></li>
+        <li>Go to our <span><a href="http://hummingbird.me/users/Slack">Hummingbird profile</a></span></li>
+        <li>Paste the above-written key into a new post and share it</li>
         <li>Check your mail for an invite!</li>
       </ol>
     </div>
   </div>
   </div>
-  <footer>
-    <div class="row">
-      <div class="divider"></div>
-      <span>Josh is love, Josh is life</span>
-    </div>
-  </footer>
+  
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
