--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
       </form>
     </div>
     <span class="col s12">Don't have a <a href="http://hummingbird.me">hummingbird.me</a> account? Get one <a href="http://hummingbird.me/sign-up">here!</a></span>
-    <span class="col s12">Already member of the chat? <a href="#">Join</a> or download the <a href="#">app!</a></span>
+    <span class="col s12">Already member of the chat? <a href="https://hummingbirdchat.slack.com">Join</a> or download the <a href="https://hummingbirdchat.slack.com/app">app!</a></span>
     </div>
   </div>
   <footer>
