Stuff I did in deployment 'I don't always test in production.... well actually I do.'

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,14 +39,14 @@
       </form>
     </div>
     <span class="col s12">Don't have a <a href="http://hummingbird.me">hummingbird.me</a> account? Get one <a href="http://hummingbird.me/sign-up">here!</a></span>
-    <span class="col s12">Already member of the chat? <a href="https://hummingbirdchat.slack.com">Join</a> or download the <a href="https://hummingbirdchat.slack.com/app">app!</a></span>
+    <span class="col s12">Already member of the chat? <a href="https://humbird.slack.com">Join</a> or download the <a href="https://humbird.slack.com/app">app!</a></span>
     </div>
   </div>
   <footer>
     <div class="valign-wrapper">
     <ul>
       <li><img src="{{ url_for('static', filename='img/hb.png') }}" alt=" " /></li>
-      <li><a href="#">Rules</a> | </li>
+      <li><a href="https://forums.hummingbird.me/t/my-little-chat-can-t-be-this-fun-hummingbird-slack-chat/27566">Rules</a> | </li>
       <li>Background Image by <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=40316086">LighTofHeaveN</a> (edited by <a href="http://konachan.com/post/show/174709/black_eyes-brown_hair-lightofheaven-long_hair-maki">MetalAnimer</a>)</li>
     </ul>
   </div>
