--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -19,9 +19,10 @@
     <div class="container">
     <div class="card key">
       <div class="center code">{{invite_id}}</div>
-      <button class="waves-effect deep-orange-text btn-flat right">
+<!--      <button class="waves-effect deep-orange-text btn-flat right">
         Copy to Clipboard
       </button>
+!-->
     </div>
     <div class="card steps">
     <div class="row">
