--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -19,10 +19,9 @@
     <div class="container">
     <div class="card key">
       <div class="center code">{{invite_id}}</div>
-<!--      <button class="waves-effect deep-orange-text btn-flat right">
+      <button class="waves-effect deep-orange-text btn-flat right copy">
         Copy to Clipboard
       </button>
-!-->
     </div>
     <div class="card steps">
     <div class="row">
@@ -37,8 +36,50 @@
     </div>
   </div>
   </div>
-  
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+<script type="text/javascript">
+function copyTextToClipboard(text) {
+  var textArea = document.createElement("textarea");
+
+  textArea.style.position = 'fixed';
+  textArea.style.top = 0;
+  textArea.style.left = 0;
+
+  textArea.style.width = '2em';
+  textArea.style.height = '2em';
+
+  textArea.style.padding = 0;
+
+  textArea.style.border = 'none';
+  textArea.style.outline = 'none';
+  textArea.style.boxShadow = 'none';
+  textArea.style.background = 'transparent';
+
+
+  textArea.value = text;
+
+  document.body.appendChild(textArea);
+
+  textArea.select();
+
+  try {
+    var successful = document.execCommand('copy');
+    var msg = successful ? 'successful' : 'unsuccessful';
+    console.log('Copying text command was ' + msg);
+  } catch (err) {
+    console.log('Oops, unable to copy');
+  }
+
+  document.body.removeChild(textArea);
+}
+
+
+var copyBtn = document.querySelector('.copy');
+
+copyBtn.addEventListener('click', function(event) {
+  copyTextToClipboard('{{invite_id}}');
+});
+</script>
 </html>
